@@ -25,6 +25,16 @@ extern double BrowserFPS;				/* defined in VRMLC.pm */
 
 #define BROWMAGIC 12345
 
+#define FUNC_INIT  \
+	if ((brow = (BrowserNative *)JS_GetPrivate(context, obj)) == NULL) { \
+		printf("JS_GetPrivate failed in JavaScript Browser FUNC_INIT.\n"); \
+		return JS_FALSE; \
+	} \
+	if (brow->magic != BROWMAGIC) { \
+		printf("Wrong browser magic!\n"); \
+		return JS_FALSE; \
+	}
+
 static JSBool
 doVRMLRoute(JSContext *context,
 			JSObject *obj,
